# zebrafy

./: .editorconfig  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .ruff.toml  README.md  README.rst  prettier.config.cjs  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: conf.py  index.rst  modules.rst  requirements.in  requirements.txt  usage.rst  zebrafy.rst
tests/: __init__.py  test_zebrafy.py  test_zebrafy_common.py  test_zebrafy_crc.py  test_zebrafy_graphic_field.py  test_zebrafy_image.py  test_zebrafy_pdf.py  test_zebrafy_zpl.py
tests/static/: image_gf_high_threshold.zpl  image_gf_low_threshold.zpl  image_gf_no_dither.zpl  image_zpl_gfa.zpl  image_zpl_gfb.zpl  image_zpl_gfc.zpl  pdf_gf_high_threshold.zpl  pdf_gf_low_threshold.zpl  pdf_gf_no_dither.zpl  pdf_zpl_gfa.zpl  pdf_zpl_gfb.zpl  pdf_zpl_gfc.zpl  test_image_ascii.zpl  test_image_b64.zpl  test_image_broken.zpl  test_image_gfb.zpl  test_image_gfc.zpl  test_image_gfc_broken_compression.zpl  test_image_gfc_broken_crc.zpl  test_image_high_threshold.zpl  test_image_invert.zpl  test_image_invert_no_dither.zpl  test_image_low_threshold.zpl  test_image_multiple.zpl  test_image_no_dither.zpl  test_image_pos_x_pos_y.zpl  test_image_rotation.zpl  test_image_string_line_break.zpl  test_image_width_height.zpl  test_image_z64.zpl  test_image_z64_broken_compression.zpl  test_image_z64_broken_crc.zpl  test_pdf_ascii.zpl  test_pdf_b64.zpl  test_pdf_gfa.zpl  test_pdf_gfb.zpl  test_pdf_gfc.zpl  test_pdf_high_dpi.zpl  test_pdf_high_threshold.zpl  test_pdf_low_dpi.zpl  (+7 more)
zebrafy/: __init__.py  crc.py  graphic_field.py  zebrafy.py  zebrafy_image.py  zebrafy_pdf.py  zebrafy_zpl.py
