[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zebrafy"
dynamic = ["version"]
description = "Python library for converting PDF and images to Zebra Programming Language (ZPL)"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Manufacturing",
    "Topic :: Printing",
]
dependencies = ["pillow", "pypdfium2>=4.8.0"]
requires-python = ">=3.8"

[project.optional-dependencies]
docs = [
    "sphinx>=7.0.0",
    "sphinx_autodoc_typehints>=2.0.0",
    "sphinx_rtd_theme>=2.0.0",
]
test = [
    "pytest-cov",
]
lint = [
    "pre-commit",
]
build = [
    "setuptools>=64",
    "setuptools_scm>=8",
    "wheel",
    "build",
]

[[project.authors]]
name = "Miika Nissi"
email = "miika@miikanissi.com"

[[project.maintainers]]
name = "Miika Nissi"
email = "miika@miikanissi.com"

[project.license]
text = "LGPLv3"

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://github.com/miikanissi/zebrafy/"
Documentation = "https://zebrafy.readthedocs.io/"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = [ "zebrafy"]
namespaces = false

[tool.setuptools_scm]
version_file = "zebrafy/_version.py"
version_scheme = "no-guess-dev"

[tool.pytest.ini_options]
addopts = "--cov --cov-report html --cov-report term-missing --cov-fail-under 95"

[tool.coverage.run]
source = ["zebrafy"]
